--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,14 +20,17 @@
         <item>Card hint</item>
         <item>First letter</item>
         <item>Last letter</item>
+
     </string-array>
-<!--    <string-array name="card_options">
-        <item>Beginner</item>
-        <item>Elementary</item>
-        <item>Intermediate</item>
-        <item></item>
-        <item>Delete card</item>
-    </string-array>-->
+
+    <string-array name="deck_settings">
+        <item>Rename</item>
+        <item>Stack</item>
+        <item>Cards per day</item>
+        <item>Hints</item>
+        <item>Archive</item>
+        <item>Remove</item>
+    </string-array>
     <string name="choose">Accept</string>
     <string name="cancel">Cancel</string>
     <string name="input_hint">Deck name</string>
@@ -50,4 +53,5 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_goals">GoalsActivity</string>
+    <string name="title_activity_deck_settings">DeckSettingsActivity</string>
 </resources>
